[package]
name = "ecochain"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libp2p-identity = { version = "0.2.10", features = ["ed25519"] }
serde = { version = "1.0.216", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["ed25519", "rsa", "secp256k1", "request-response", "tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros", "identify", "rendezvous", "mdns","tokio"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
